crates/conformctl/tests/snapshots/snapshot_tests__check_dir_empty.snap
---
source: crates/conformctl/tests/snapshot_tests.rs
expression: normalize_output(&stderr)
---
conform-dir: <PATH>

Summary:
  Sensor               Status
  ------               ------

conform-dir: <PATH>
