crates/conformctl/tests/snapshots/snapshot_tests__check_malformed_json.snap
---
source: crates/conformctl/tests/snapshot_tests.rs
expression: normalize_output(&stderr)
---
conformctl error: --ordering requires --sensor-id
