crates/conformctl/tests/snapshots/snapshot_tests__no_subcommand.snap
---
source: crates/conformctl/tests/snapshot_tests.rs
expression: normalize_output(&stderr)
---
Standalone conformance checker for cockpitctl sensor receipts

Usage: conformctl.exe <COMMAND>

Commands:
  check      Validate a single sensor receipt against the protocol
  check-dir  Validate every sensor receipt in an artifacts/ directory at once
  help       Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version
